* Replaced retention policy type infinite with disabled. * Revert the time and size units back to granularity of internal implementation * Updated REST api to reflect the internal time/size granularities
