# shared/controller/src/main/swagger/Controller.yaml
@@ -294,9 +294,9 @@ definitions:
       type:
         type: string
         enum:
-        - INFINITE
-        - LIMITED_DAYS
-        - LIMITED_SIZE_MB
+        - DISABLED
+        - LIMITED_TIME_MILLIS
+        - LIMITED_SIZE_BYTES
       value:
         type: integer
         format: int64
